Update: main  // テスト

--- a/Orinium Browser Rust/Cargo.toml
+++ b/Orinium Browser Rust/Cargo.toml
@@ -4,4 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-eframe = "0.19.0"
+bevy = "0.15" # make sure this is the latest version
+
+# Enable a small amount of optimization in the dev profile.
+[profile.dev]
+opt-level = 1
+
+# Enable a large amount of optimization in the dev profile for dependencies.
+[profile.dev.package."*"]
+opt-level = 3
