--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Orinium[[:space:]]Browser[[:space:]]Rust/target/debug/Orinium_Browser.exe filter=lfs diff=lfs merge=lfs -text
 Orinium[[:space:]]Browser[[:space:]]Rust/target/debug/Orinium_Browser.pdb filter=lfs diff=lfs merge=lfs -text
+Orinium[[:space:]]Browser[[:space:]]Rust/assets/fonts/アプリ明朝.otf filter=lfs diff=lfs merge=lfs -text
