GUI面を作り始めた（実行可能）

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-
+iced = { version = "0.13.1", features = ["image"] }
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
