--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 [dependencies]
 iced = { version = "0.13.1", features = ["image"] }
+reqwest = { version = "0.11", features = ["blocking", "json"] } # blocking を外すと非同期版、json はオプション
+tokio = { version = "1", features = ["full"] } # async/await
+serde_json = "1.0.140"
+serde = { version = "1.0.219", features = ["derive"] }
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
