--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 iced = { version = "0.13.1", features = ["image"] }
+glium = "0.36.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] } # blocking を外すと非同期版、json はオプション
 tokio = { version = "1", features = ["full"] } # async/await
 serde_json = "1.0.140"
