--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-iced = { version = "0.13.1", features = ["image"] }
-glium = "0.36.0"
+eframe = "0.31.1"
 reqwest = { version = "0.11", features = ["blocking", "json"] } # blocking を外すと非同期版、json はオプション
 tokio = { version = "1", features = ["full"] } # async/await
 serde_json = "1.0.140"
