--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.detectIndentation": false,
-    "draw.folder.structure.exclude": [".git"],
+    "draw.folder.structure.exclude": [".git", ".vscode",],
     "draw.folder.structure.respectGitignore": true
 }
