--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ winit = "0.30.12"
 wgpu = "26.0.1"
 url = "2.5"
 twoway = "0.2.2"
+rustls = { version = "0.22.2", default-features = false, features = ["tls12"] }
+rustls-native-certs = "0.7.0"
+tokio-rustls = "0.25.0"
