--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,10 @@ pollster = "0.3"
 env_logger = "0.10.2"
 log = "0.4"
 winit = "0.30.12"
-wgpu = "26.0.1"
+wgpu = { version = "0.19", features = ["default"] }
 url = "2.5"
 twoway = "0.2.2"
 rustls = { version = "0.22.2", default-features = false, features = ["tls12"] }
 rustls-native-certs = "0.7.0"
 tokio-rustls = "0.25.0"
+bytemuck = { version = "1.14", features = ["derive"] }
