--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ pollster = "0.3"
 env_logger = "0.10.2"
 log = "0.4"
 winit = "0.30.12"
-wgpu = "26.0.1"
+wgpu = "27.0.1"
+bytemuck = { version = "1.14", features = ["derive"] }
 url = "2.5"
 twoway = "0.2.2"
 rustls = { version = "0.22.2", default-features = false, features = ["tls12"] }
